SCRz/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:06:04 **** Incremental Build of configuration x86_64-debug for project 1 ****
make -j4 all 
make: Nothing to be done for 'all'.
09:06:14 **** Incremental Build of configuration x86_64-debug for project 1 ****
make -j4 all 
make: Nothing to be done for 'all'.
09:07:36 **** Incremental Build of configuration x86_64-debug for project 1 ****
make -j4 all 
make: Nothing to be done for 'all'.
09:07:40 **** Incremental Build of configuration x86_64-debug for project ezbarja ****
make -j4 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/ezbarja.d,-MT,build/x86_64-debug/src/ezbarja.o -o build/x86_64-debug/src/ezbarja.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/ezbarja.c
src/ezbarja.c: In function 'main':
src/ezbarja.c:37:3: warning: implicit declaration of function 'sigemptyse' [-Wimplicit-function-declaration]
   sigemptyse(&set);
   ^
src/ezbarja.c:38:18: error: 'SIGTMIN' undeclared (first use in this function)
   sigaddset(&set,SIGTMIN);
                  ^
src/ezbarja.c:38:18: note: each undeclared identifier is reported only once for each function it appears in
cc: C:/QNXSDP/host/win64/x86_64/usr/lib/gcc/x86_64-pc-nto-qnx7.0.0/5.4.0/cc1 caught signal 1
Makefile:55: recipe for target 'build/x86_64-debug/src/ezbarja.o' failed
make: *** [build/x86_64-debug/src/ezbarja.o] Error 1
09:07:55 **** Incremental Build of configuration x86_64-debug for project 1 ****
make -j4 all 
make: Nothing to be done for 'all'.
09:10:35 **** Incremental Build of configuration x86_64-debug for project 1 ****
make -j4 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/1.d,-MT,build/x86_64-debug/src/1.o -o build/x86_64-debug/src/1.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/1.c
src/1.c: In function 'main':
src/1.c:51:4: warning: implicit declaration of function 'sleep' [-Wimplicit-function-declaration]
    sleep(5);
    ^
src/1.c:52:13: warning: implicit declaration of function 'getpid' [-Wimplicit-function-declaration]
    sigqueue(getpid(),SIGRTMIN,value);
             ^
src/1.c:38:18: warning: unused variable 'tid2' [-Wunused-variable]
  pthread_t tid1, tid2;
                  ^
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/1   build/x86_64-debug/src/1.o  
09:11:59 **** Incremental Build of configuration x86_64-debug for project 1 ****
make -j4 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/1.d,-MT,build/x86_64-debug/src/1.o -o build/x86_64-debug/src/1.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/1.c
src/1.c: In function 'main':
src/1.c:52:4: warning: implicit declaration of function 'sleep' [-Wimplicit-function-declaration]
    sleep(5);
    ^
src/1.c:53:13: warning: implicit declaration of function 'getpid' [-Wimplicit-function-declaration]
    sigqueue(getpid(),SIGRTMIN,value);
             ^
src/1.c:39:18: warning: unused variable 'tid2' [-Wunused-variable]
  pthread_t tid1, tid2;
                  ^
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/1   build/x86_64-debug/src/1.o  
09:12:19 **** Incremental Build of configuration x86_64-debug for project 1 ****
make -j4 all 
qcc -Vgcc_ntox86_64 -c -Wp,-MMD,build/x86_64-debug/src/1.d,-MT,build/x86_64-debug/src/1.o -o build/x86_64-debug/src/1.o  -Wall -fmessage-length=0 -g -O0 -fno-builtin  src/1.c
src/1.c: In function 'main':
src/1.c:52:4: warning: implicit declaration of function 'sleep' [-Wimplicit-function-declaration]
    sleep(5);
    ^
src/1.c:53:13: warning: implicit declaration of function 'getpid' [-Wimplicit-function-declaration]
    sigqueue(getpid(),SIGRTMIN,value);
             ^
src/1.c:39:18: warning: unused variable 'tid2' [-Wunused-variable]
  pthread_t tid1, tid2;
                  ^
qcc -Vgcc_ntox86_64 -o build/x86_64-debug/1   build/x86_64-debug/src/1.o  
